--- a/frontend/src/components/map.css
+++ b/frontend/src/components/map.css
@@ -28,13 +28,14 @@
   
   @media screen and (min-width: 799px) {
     .google-map {
-      height: 80vh;
+      height: 100vh;
+      width: auto;
     }
   
-    .map-h2 {
+    /* .map-h2 {
       font-size: 1.3rem;
       font-weight: 400;
-    }
+    } */
   
     .pin {
       width: 15vw;
